Fix DOM bridge compatibility below Android 14